force-app/main/default/objects/FIN_RecordsForwarder__e/FIN_RecordsForwarder__e.object-meta.xml
<CustomObject>
    <label>RecordsForwarder</label>
    <pluralLabel>RecordsForwarders</pluralLabel>
</CustomObject>