force-app/main/default/objects/FIN_RecordsForwarder__e/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>Object type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>