force-app/main/default/objects/FIN_RecordsForwarder__e/fields/OperationName__c.field-meta.xml
<CustomField>
    <fullName>OperationName__c</fullName>
    <label>OperationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>