force-app/main/default/objects/FIN_RecordsForwarder__e/fields/RecordsToProcessNew__c.field-meta.xml
<CustomField>
    <fullName>RecordsToProcessNew__c</fullName>
    <label>Records to process NEW</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>