force-app/main/default/objects/FIN_RecordsForwarder__e/fields/RecordsToProcessOld__c.field-meta.xml
<CustomField>
    <fullName>RecordsToProcessOld__c</fullName>
    <label>Records to process OLD</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>